--- a/components/form.module.css
+++ b/components/form.module.css
@@ -18,10 +18,21 @@
     color: blue;
     text-align: center;
 }
+.form2 {
+    width: 400px;
+    height: 60px;
+    margin: 1PX 35px 10px 35PX;
+    border-radius: 15px;
+    border-color: rgb(203, 205, 206);
+    background-color: blanchedalmond;
+    font-size: 28px;
+    color: blue;
+    text-align: center;
+}
 .deductform {
-    width: 300px;
-    height: 50px;
-    margin: 10PX 50px 20px 50PX;
+    width: 350px;
+    height: 70px;
+    margin: 10PX 50px 50px 80PX;
     border-radius: 15px;
     border-color: rgb(203, 205, 206);
     background-color: rgb(252, 251, 251);
@@ -39,6 +50,13 @@
     color:#fff;
     padding: 10px 40px;
     margin: 20px 150px;
+    font-size: large;  
+}
+.deletBtn {
+    background-color:red;
+    color:#fff;
+    padding: 10px 30px;
+    margin: 20px 155px;
     font-size: large;  
 }
 .resetBtn {
@@ -64,6 +82,11 @@
     text-align: center;
     font-weight: 700;
     font-size: 20px;
+}
+.inputtitle{
+    text-align: center;
+    font-weight: 700;
+    font-size: 28px;
 }
 .menutext{
    
